# ANSI_Book

./: CMakeLists.txt  atoi_lower.c  conditionalProgram.c  conditionalPrograms.h  countingDigitsWithArrays.c  countingSpaces.c  fahreinheitPowerFunctions.c  firstProgram.c  getline_strindex.c  main.c  polishcalculator.c
ANSI_Activities/: array.h  atoi_lower.h  binarySearch.c  countingDigitsWithArrays.c  functionRecursion.h  getop_getch_ungetch.c  itoaAndTrim.c  longestLine.c  loopPrograms.h  matrix.h  pointers.h  polishcalculator.c  polishcalculator.h  structure.h  switchCase.h
